--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -3,14 +3,14 @@ opacity-rule = [
     "90:class_g = 'Dunst'",
     "90:class_g = 'st-256color'",
 ];
-#active-opacity = 0.90
-#inactive-opacity = 3.90
+active-opacity = 0.99
+inactive-opacity = 0.90
 
 # Fading
 fading = true;
 # fade-delta = 30;
-fade-in-step = 0.02;
-fade-out-step = 0.02;
+fade-in-step = 0.09;
+fade-out-step = 0.09;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
 fade-exclude = [ ];
