--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -3,8 +3,14 @@ opacity-rule = [
     "90:class_g = 'Dunst'",
     "90:class_g = 'st-256color'",
 ];
-active-opacity = 0.99
-inactive-opacity = 0.90
+
+#ctive-opacity = 0.9
+
+#inactive-opacity = 0.9
+
+
+
+
 
 # Fading
 fading = true;
