--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -8,10 +8,6 @@ opacity-rule = [
 
 #inactive-opacity = 0.9
 
-
-
-
-
 # Fading
 fading = true;
 # fade-delta = 30;
@@ -25,9 +21,17 @@ fade-exclude = [ ];
 blur:
 {
 	method = "dual_kawase";
-	strength = 3;
-	
-}
+	strength = 4;
+};
+#blur:
+#{
+#  method = "gaussian";
+#  size = 10;
+#  deviation = 20.0;
+#};
+
+
+
 
 # Other
 backend = "glx";
