--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -12,6 +12,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>Liberation Mono</family>
 			<family>Linux Biolinum</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
@@ -20,6 +21,7 @@
 	<alias>
 		<family>sans</family>
 		<prefer>
+			<family>Liberation Mono</family>
 			<family>Linux Biolinum</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
@@ -28,6 +30,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>cozette</family>
 			<family>Noto Sans Mono</family>
 			<family>Liberation Mono</family>
 			<family>Braille</family>
