--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -15,7 +15,7 @@ fade-in-step = 0.09;
 fade-out-step = 0.09;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
-fade-exclude = [ ];
+fade-exclude = ["class_g = 'dmenu'"];
 
 # Blur
 blur:
@@ -71,4 +71,4 @@ shadow = true;
 shadow-radius = 15;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
-shadow-exclude = [ "name = 'Notification'", "class_g = 'dwm'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
+shadow-exclude = [ "name = 'Notification'", "class_g = 'dmenu'", "class_g = 'dwm'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
