--- a/.config/ly/config.ini
+++ b/.config/ly/config.ini
@@ -45,10 +45,10 @@ animation = 0
 
 # Blank main box background
 # Setting to false will make it transparent
-#blank_box = true
+blank_box = false
 
 # Remove main box borders
-#hide_borders = false
+hide_borders = true
 
 # Main box margins
 #margin_box_h = 2
@@ -77,7 +77,7 @@ animation = 0
 
 
 # Remove power management command hints
-#hide_key_hints = false
+hide_key_hints = true
 
 # Specifies the key used for shutdown
 #shutdown_key = F1
@@ -131,7 +131,7 @@ animation = 0
 
 
 # xinitrc
-#xinitrc = ~/.xinitrc
+xinitrc = /bin/startx
 
 # Xorg server command
 #x_cmd = /usr/bin/X
